// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should MovieCard render correctly with video playing 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <video
    autoPlay={true}
    height={175}
    muted={true}
    poster="the-grand-budapest-hotel.jpg"
    src="https://trailers.apple.com/movies/universal/krampus/krampus-tlr1_h480p.mov"
    width={280}
  />
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/films/1"
      onClick={[Function]}
    >
      The Grand Budapest Hotel
    </a>
  </h3>
</article>
`;

exports[`should MovieCard render correctly without video 1`] = `
<article
  className="small-movie-card catalog__movies-card"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="small-movie-card__image"
    onClick={[Function]}
  >
    <img
      alt="The Grand Budapest Hotel"
      height="175"
      src="the-grand-budapest-hotel.jpg"
      width="280"
    />
  </div>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/films/1"
      onClick={[Function]}
    >
      The Grand Budapest Hotel
    </a>
  </h3>
</article>
`;
